--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><i style='font-size:24px' class='fas'>&#xf816;</i>Chillies Restaurant</a>
+                    <a class="navbar-brand sm-pt-3" href="index.html"><i style='font-size:24px' class='fas'>&#xf816;</i>Chillies Restaurant</a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
